@@ -1313,10 +1313,10 @@ zabbix_log(LOG_LEVEL_WARNING, "RUN_COMMAND cmd = '%s'",cmd);
 		snprintf(flag,MAX_FLAG_LEN,"wait");
 	}
 
-zabbix_log(LOG_LEVEL_WARNING, "RUN_COMMAND flag = '%s'",flag);
+	zabbix_log(LOG_LEVEL_DEBUG, "RUN_COMMAND flag = '%s'",flag);
 	if(strcmp(flag,"wait") == 0)
 	{
-zabbix_log(LOG_LEVEL_WARNING, "RUN_COMMAND runed as WAIT",flag);
+	zabbix_log(LOG_LEVEL_DEBUG, "RUN_COMMAND is running as WAIT",flag);
 		return EXECUTE_STR(cmd,command,flags,result);
 	}
 	else if(strcmp(flag,"nowait") != 0)
@@ -1326,7 +1326,7 @@ zabbix_log(LOG_LEVEL_WARNING, "RUN_COMMAND runed as WAIT",flag);
 	
 	zabbix_log(LOG_LEVEL_DEBUG, "Run remote command '%s'", command);
 	
-zabbix_log(LOG_LEVEL_WARNING, "RUN_COMMAND runed as NOWAIT",flag);
+	zabbix_log(LOG_LEVEL_DEBUG, "RUN_COMMAND to be started as NOWAIT",flag);
 	
 	pid = fork(); /* run new thread 1 */
 	switch(pid)
